syntax="proto2";

package org.dst.rpc.protobuf;

import "common_pb.proto";

option java_package="org.dst.rpc.protobuf.generated";
option java_outer_classname="StringProtocol";
option cc_generic_services = true;

message PutRequest {
    required string key = 1;
    required string value = 2;
};

message PutResponse {
    required Status status = 1;
};

message GetRequest {
    required string key = 1;
}

message GetResponse {
    required Status status = 1;
    optional string value =2;
};

service DstStringService {
    rpc put(PutRequest) returns (PutResponse);
    rpc get(GetRequest) returns (GetResponse);
}
